split to vim and git

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <a href="os.md.html"     id="toc_item" target="main">OS</a>
 <a href="sh.md.html"     id="toc_item" target="main">Shell</a>
 <a href="dev.md.html"    id="toc_item" target="main">Dev</a>
-<a href="vcs.md.html"    id="toc_item" target="main">VCS</a>
+<a href="vim.md.html"    id="toc_item" target="main">Vim</a>
+<a href="git.md.html"    id="toc_item" target="main">Git</a>
 <a href="prog.md.html"   id="toc_item" target="main">Prog</a>
 <a href="cg.md.html"     id="toc_item" target="main">Cg</a>
 <a href="soft.md.html"   id="toc_item" target="main">Soft</a>
