--- a/git.md.html
+++ b/git.md.html
@@ -2,11 +2,9 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="default.css">
 
-**VCS**
-
-<meta name="keywords" content="*memo_vcs*">
-
 <meta name="keywords" content="*memo_git*">
+**Git**
+
 git
 =======================================================
 
