--- a/vim.md.html
+++ b/vim.md.html
@@ -41,6 +41,28 @@ $ vim -u NONE
 ~~~
 
 <meta name="keywords" content="*memo_vim.script*">
+<meta name="keywords" content="*memo_vim.script.syntax*">
+## syntax
+~~~
+let var = val
+let var_list = []
+let var_dict = {}
+
+if expr
+  statements
+elseif expr
+  statements
+endif
+
+for var in list
+endfor
+
+func name(arg1, arg2)
+  let var1 = a:arg1
+  let var2 = a:arg2
+endfunc
+~~~
+
 ## script
 Word   | Description
 ---    | ---
