--- a/os.md.html
+++ b/os.md.html
@@ -174,6 +174,7 @@ cd /d D:\work
 start opengl_prog.exe
 ~~~
 
+<meta name="keywords" content="*memo_os.bat.syntax*">
 ## sample.bat
 ~~~
 @echo off
