--- a/links.md.html
+++ b/links.md.html
@@ -101,8 +101,8 @@ Develop
 
 ## フォント
 - [プログラミング用日本語フォント](https://github.com/tsunesan3/awsome-jp-coding-fonts)
-  - [Cica](https://github.com/miiton/Cica)
-    - [NerdFont](https://miiton.github.io/Cica/)
+  - [Cica](https://github.com/miiton/Cica) |
+    [NerdFont一覧](https://miiton.github.io/Cica/)
   - [Myrica](https://myrica.estable.jp/)
   - [Rounded Mgen+](http://jikasei.me/font/rounded-mgenplus/)
 - [日本語等幅フォント](https://qiita.com/hamaguchitm/items/546d40b7777bd9242e78)
