--- a/cpp.md.html
+++ b/cpp.md.html
@@ -2,84 +2,9 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="default.css">
 
-**Programming**
+**C++**
 
 <meta name="keywords" content="*memo_prog*">
-
-<meta name="keywords" content="*memo_prog.make*">
-<meta name="keywords" content="*memo_prog.make.syntax*">
-Makefile
-=======================================================
-## syntax
-### include
-~~~
--include local.mk
-~~~
-
-### if
-~~~
-ifeq ($(VAR),var)
-else
-endif
-~~~
-
-### for
-~~~
-loop:
-	@for i in "$(DIRS)"; do\
-		echo "=== [$$i] ===";\
-		cd "$$i" && echo "$$i" && cd ..;\
-	done
-~~~
-
-### PHONY
-~~~
-.PHONY: tags
-tags:
-	ctags -R .
-~~~
-
-<meta name="keywords" content="*memo_prog.cmake*">
-<meta name="keywords" content="*memo_prog.cmake.syntax*">
-CMakeLists.txt
-=======================================================
-## module list
-~~~
-cmake --help-module-list
-~~~
-
-## include
-~~~
-if(EXISTS ${PROJECT_SOURCE_DIR}/local.cmake)
-    include(${PROJECT_SOURCE_DIR}/local.cmake)
-endif()
-~~~
-
-## 環境変数
-~~~
-set(VAR $ENV{VAR})
-~~~
-
-## Unix Makefiles
-~~~
-mkdir build
-cd build
-cmake .. -G "Unix Makefiles"
-~~~
-
-## Visual Studio 2017
-~~~
-mkdir build
-cd build
-cmake .. -G "Visual Studio 15 2017 Win64"
-~~~
-
-## add_custom_command
-~~~
-add_custom_command(TARGET sample POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy_if_different ${FILES} $<TARGET_FILE_DIR:sample>
-  )
-~~~
 
 <meta name="keywords" content="*memo_prog.c*">
 <meta name="keywords" content="*memo_prog.cpp*">
@@ -290,171 +215,175 @@ template<class For, class For2, class BinPred>
 For search(For first, For last, For2 first2, For2 last2, BinPred p);
 ~~~
 
-<meta name="keywords" content="*memo_prog.python*">
-Python
+<meta name="keywords" content="*memo_prog.glsl*">
+GLSL
 =======================================================
 
-<meta name="keywords" content="*memo_prog.python.venv*">
-## venv
+<meta name="keywords" content="*memo_prog.opengl*">
+OpenGL
+=======================================================
+- Right-handed coordinate system
+- X-right
+- Y-up
+- Z-front
+- Matrix
+    - Column order memory
+- [Column-major, Row-major](https://qiita.com/suzuryo3893/items/9e543cdf8bc64dc7002a)
 
-### install
 ~~~
-$ apt install python3-venv
-~~~
+M = M_n * ... * M_0 * v
 
-### create
-~~~
-$ python3 -m venv {venvname}
-~~~
+M =
+    0 4  8 12
+    1 5  9 13
+    2 6 10 14
+    3 7 11 15
 
-### activate
-~~~
-# Linux
-$ source {venvname}/bin/activate
-# Windows
-$ .\{venvname}\Scripts\activate
-~~~
-
-### deactivate
-~~~
-$ deactivate
-~~~
-
-## pip
-<meta name="keywords" content="*memo_prog.python.pip*">
-
-Command                          | Description
----------------------------------|---
-pip -V                           | show version
-pip list                         | list installed packages
-pip freeze                       | list required packages
-pip search {pkg}                 | search package
-pip install {pkg}                | install package
-pip install -U {pkg}             | update package
-pip install -r requirements.txt  | install packages listed in requirements.txt
-pip uninstall {pkg}              | uninstall package
-
-## upgrade pip
-~~~
-python -m pip install --upgrade pip
+T =
+    1 0 0 x
+    0 1 0 y
+    0 0 1 z
+    0 0 0 1
 ~~~
 
-## list / install requrired packages
+<meta name="keywords" content="*memo_prog.directx*">
+DirectX
+=======================================================
+- Left-handed coordinate system
+- Matrix
+    - Row order memory
+
+<meta name="keywords" content="*memo_prog.eigen*">
+Eigen
+=======================================================
+- Column order memory
+- Row major calc
+
+## the order of multiplying matrix
+\begin{equation}
+v' = M_n * M_{n-1} * ... * M_2 * M_1 * v
+\end{equation}
+
+## Matrix
+- Matrix3f m(row, col)
+- m(row, col)
+- column-major storage order
+
+## Vector
+- Vector3f(row)
+- RowVector3f(col)
+
 ~~~
-pip freeze > requirements.txt
-pip install -r requirements.txt
+typedef Matrix<float, 3, 1> Vector3f;
+typedef Matrix<float, 1, 3> RowVector3f;
 ~~~
 
-## script
+<meta name="keywords" content="*memo_prog.glm*">
+glm
+=======================================================
 ~~~
-#!/usr/bin/env python
-# -*- coding: utf-8 -*-
+# uninitialized matrix
+glm::mat4 m;
 
-import sys
+# identity matrix
+glm::mat4 m(1.0f);
 
-def main(argv):
-    print("Hello world.")
+# pointer to data
+float* p = &(m[0][0])
 
-if __name__ == "__main__":
-    main(sys.argv)
-~~~
-
-## print sys.path
-~~~
->>> import sys
->>> sys.path
+# ortho proj
+glm::mat4 proj = glm::ortho<float>(0, w, 0, h);
+(0, 0) (w, h) -> (-1, -1) (1, 1)
 ~~~
 
-## import
-~~~
-import <modeule>
-import <modeule> as <new_name>
-from <package> import <symbol>
-from <package> import <symbol> as <new_name>
-~~~
+<meta name="keywords" content="*memo_prog.opencv*">
+OpenCV
+=======================================================
+## Type
+         | description
+---------|---------------------------
+CV_8UC1  | 8bit unsigned 1 channel
+CV_32FC2 | 32bit float 2 channel
 
-## examples of import
-~~~
-import numpy as np
-import matplotlib.pyplot as plt
-from matplotlib import pyplot as plt
-~~~
+<meta name="keywords" content="*memo_prog.imgui*">
+imgui
+=======================================================
+## demo
+- ShowDemoWindow()
 
-<meta name="keywords" content="*memo_prog.python.syntax*">
+<meta name="keywords" content="*memo_prog.make*">
+<meta name="keywords" content="*memo_prog.make.syntax*">
+Makefile
+=======================================================
 ## syntax
+### include
 ~~~
-if expr and expr:
-  pass
-
-if expr or expr:
-  pass
-
-if not expr:
-  pass
+-include local.mk
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.anaconda*">
-<meta name="keywords" content="*memo_prog.python.miniconda*">
-<meta name="keywords" content="*memo_prog.python.conda*">
-Anaconda / Miniconda
+### if
+~~~
+ifeq ($(VAR),var)
+else
+endif
+~~~
+
+### for
+~~~
+loop:
+	@for i in "$(DIRS)"; do\
+		echo "=== [$$i] ===";\
+		cd "$$i" && echo "$$i" && cd ..;\
+	done
+~~~
+
+### PHONY
+~~~
+.PHONY: tags
+tags:
+	ctags -R .
+~~~
+
+<meta name="keywords" content="*memo_prog.cmake*">
+<meta name="keywords" content="*memo_prog.cmake.syntax*">
+CMakeLists.txt
 =======================================================
-
-Command                                          | Description
--------------------------------------------------|---
-conda info                                       | print info
-conda info -e                                    | print environments
-conda list                                       | list installed packages
-conda update --all                               | update all packages
-conda update {pkg}                               | update package
-conda search {pkg}                               | search packages
-conda install {pkg}                              | install
-conda uninstall {pkg}                            | uninstall
-conda init bash                                  | init bash
-conda create -n {env} python[=3.7]               | create env
-conda create -n {new env} --clone {existing env} | clone env
-conda remove -n {env} --all                      | remove env
-conda activate {env}                             | activate env
-conda deactivate                                 | deactivate
-
-## init
+## module list
 ~~~
-conda update -n base -c defaults conda
-conda init bash
-conda create -n {env} python
-conda activate {env}
+cmake --help-module-list
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.numpy*">
-Numpy
-=======================================================
+## include
 ~~~
-ar = np.array(list)    # copy
-ar = np.array(ar)      # copy
-ar = np.asarray(list)  # copy
-ar = np.asarray(ar)    # no copy
+if(EXISTS ${PROJECT_SOURCE_DIR}/local.cmake)
+    include(${PROJECT_SOURCE_DIR}/local.cmake)
+endif()
 ~~~
 
-<meta name="keywords" content="*memo_prog.python.pytorch*">
-PyTorch
-=======================================================
-
-<!--
-## install pytorch
+## 環境変数
 ~~~
-#conda install pytorch-cpu -c pytorch 
-#pip install torchvision
-conda install pytorch torchvision cudatoolkit=10.0 -c pytorch
-conda install pytorch torchvision cudatoolkit=10.1 -c pytorch
+set(VAR $ENV{VAR})
 ~~~
--->
 
-<meta name="keywords" content="*memo_prog.python.tensorflow*">
-TensorFlow
-=======================================================
-
-## install tensorflow
+## Unix Makefiles
 ~~~
-pip install --upgrade tensorflow
+mkdir build
+cd build
+cmake .. -G "Unix Makefiles"
+~~~
+
+## Visual Studio 2017
+~~~
+mkdir build
+cd build
+cmake .. -G "Visual Studio 15 2017 Win64"
+~~~
+
+## add_custom_command
+~~~
+add_custom_command(TARGET sample POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy_if_different ${FILES} $<TARGET_FILE_DIR:sample>
+  )
 ~~~
 
 <style class="fallback">body{visibility:hidden}</style>
