--- a/vim.md.html
+++ b/vim.md.html
@@ -114,7 +114,7 @@ cfile  | file under the cursor
 ### autocmd
 - VimEnter
   - FileType
-  - WinEnter             :new :sp
+  - WinEnter             :sp
     - BufRead            :e
     - BufEnter
       - proc modelines
