--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 </head>
 
 <body>
-<div id="toc">
-<a href="memo.md.html"   id="toc_item" target="main">Memo</a>
-<a href="init.md.html"   id="toc_item" target="main">Init</a>
-<a href="my.md.html"     id="toc_item" target="main">My</a>
-<a href="os.md.html"     id="toc_item" target="main">OS</a>
-<a href="dev.md.html"    id="toc_item" target="main">Dev</a>
-<a href="sh.md.html"     id="toc_item" target="main">Shell</a>
-<a href="vim.md.html"    id="toc_item" target="main">Vim</a>
-<a href="git.md.html"    id="toc_item" target="main">Git</a>
-<a href="cpp.md.html"    id="toc_item" target="main">C++</a>
-<a href="python.md.html" id="toc_item" target="main">Python</a>
-<a href="cg.md.html"     id="toc_item" target="main">Cg</a>
-<a href="soft.md.html"   id="toc_item" target="main">Soft</a>
-<a href="stock.md.html"  id="toc_item" target="main">Stock</a>
-<a href="links.md.html"  id="toc_item" target="main">Links</a>
+<div                      id ="toc">
+<a href="memo.md.html"    id ="toc_item" target="main">Memo</a>
+<a href="init.md.html"    id ="toc_item" target="main">Init</a>
+<a href="my.md.html"      id ="toc_item" target="main">My</a>
+<a href="os.md.html"      id ="toc_item" target="main">OS</a>
+<a href="dev.md.html"     id ="toc_item" target="main">Dev</a>
+<a href="sh.md.html"      id ="toc_item" target="main">Shell</a>
+<a href="vim.md.html"     id ="toc_item" target="main">Vim</a>
+<a href="git.md.html"     id ="toc_item" target="main">Git</a>
+<a href="cpp.md.html"     id ="toc_item" target="main">C++</a>
+<a href="python.md.html"  id ="toc_item" target="main">Python</a>
+<a href="blender.md.html" id ="toc_item" target="main">Blender</a>
+<a href="soft.md.html"    id ="toc_item" target="main">Soft</a>
+<a href="stock.md.html"   id ="toc_item" target="main">Stock</a>
+<a href="links.md.html"   id ="toc_item" target="main">Links</a>
 </div>
 
 <div id="main_container">
