--- a/blender.md.html
+++ b/blender.md.html
@@ -103,6 +103,9 @@ F12                  | rendering
 - Kink
 - Hair Dynamics
 
+### テクスチャを取り出す
+File > External Data > Unpack All Into Files
+
 ## AO
 - 「AOベイク」で3Dモデルのクオリティを上げよう！
   - https://virtualcast.jp/blog/2020/04/blender_bake_ao/
