--- a/links.md.html
+++ b/links.md.html
@@ -183,6 +183,7 @@ Develop
 
 ## Windows
 - [chocolatey](https://chocolatey.org/)
+- [PowerToys](https://github.com/microsoft/PowerToys)
 - [Ctrl2cap](https://technet.microsoft.com/ja-jp/sysinternals/bb897578.aspx)
 - [AutoHotkey](https://www.autohotkey.com/)
   | [doc](https://www.autohotkey.com/docs/AutoHotkey.htm)
