--- a/my.md.html
+++ b/my.md.html
@@ -108,16 +108,16 @@ Vim IDE
 <meta name="keywords" content="*memo_my.vim.command*">
 Vim Command
 =======================================================
-Command                 | Description
----                     | ---
-:MyGgrep {word} {files} | Ggrep the word
-:MyGgrepHere {files}    | Ggrep the word under the cursor
-:MyGrep {word} {files}  | vimgrep the word
-:MyGrepHere {files}     | vimgrep the word under the cursor
-:MyCdo                  | apply the command '@q' to each entry in the quickfix list
-:MyCfdo                 | apply the command '@q' to each file in the quickfix list
-:MyClangFormat          | apply clang-format to the current file
-:MyTabBar               | Tabularize for vertical bars
+Command                   | Description
+---                       | ---
+:MyGgrep {word} {files}   | Ggrep the word
+:MyGgrepHere {files}      | Ggrep the word under the cursor
+:MyVimgrep {word} {files} | vimgrep the word
+:MyVimgrepHere {files}    | vimgrep the word under the cursor
+:MyCdo                    | apply the command '@q' to each entry in the quickfix list
+:MyCfdo                   | apply the command '@q' to each file in the quickfix list
+:MyClangFormat            | apply clang-format to the current file
+:MyTabBar                 | Tabularize for vertical bars
 
 <style class="fallback">body{visibility:hidden}</style>
 <script src="markdeep.min.js"></script>
