--- a/os.md.html
+++ b/os.md.html
@@ -284,7 +284,8 @@ XferCommand = /c/Windows/System32/curl -C - -f %u > %o
 Option                | 説明
 --------------------  | -----------------
 -S -h                 | help
--Syu                  | update database & update packages
+-Syy                  | forcely update database all
+-Syyu                 | forcely update database all & update packages
 -S package            | install
 -R package            | uninstall
 -Ss [pattern]         | search packages
