--- a/sh.md.html
+++ b/sh.md.html
@@ -10,6 +10,10 @@ bash
 =======================================================
 ## shell commands
 
+<meta name="keywords" content="*memo_sh.zip*">
+<meta name="keywords" content="*memo_sh.unzip*">
+<meta name="keywords" content="*memo_sh.find*">
+<meta name="keywords" content="*memo_sh.tar*">
 ~~~
 Command                              | Description
 ---                                  | ---
