--- a/git.md.html
+++ b/git.md.html
@@ -45,6 +45,7 @@ git init --bare
 git clone URL [work_dir]
 git clone -b branch_name URL          # specify branch
 git clone --recurse-submodules URL    # recursive
+git clone --depth 1 URL
 ~~~
 
 #### init
