--- a/python.md.html
+++ b/python.md.html
@@ -96,6 +96,7 @@ from matplotlib import pyplot as plt
 
 <meta name="keywords" content="*memo_prog.python.syntax*">
 ## syntax
+<meta name="keywords" content="*memo_prog.python.syntax.expr*">
 ### expr
 expr          | Description
 ---           | ---
@@ -105,6 +106,7 @@ not expr      | not
 0 <= i < 2    | 0以上2より小さい
 i in l        | リストlの中にiがあるか
 
+<meta name="keywords" content="*memo_prog.python.syntax.if*">
 ### if
 ~~~
 if expr:
@@ -115,6 +117,7 @@ else:
     statements
 ~~~
 
+<meta name="keywords" content="*memo_prog.python.syntax.for*">
 ### for
 ~~~
 for i in range(5):
@@ -131,6 +134,7 @@ for i in list:
     statements
 ~~~
 
+<meta name="keywords" content="*memo_prog.python.syntax.while*">
 ### while
 ~~~
 i = 0
